--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
     }
   </style>
 </head>
+
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
 <body>
   <header>
     <div><strong>Sonya Gopinath</strong></div>
@@ -247,5 +250,73 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
+
+  <section class="landing">
+    <h1>Sonya Gopinath</h1>
+    <p>Creating data-backed strategies for a more sustainable world - one model at a time.</p>
+  </section>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I'm a recent London School of Economics graduate passionate about turning evidence into action. My academic and project work bridges sustainability, data, and strategy, with experience spanning environmental modelling, research, nonprofit outreach, and content marketing. I thrive in roles where communication, analysis, and impact intersect.</p>
+
+    <div class="profile-image">
+  <img src="sonya profile 2.JPG" alt="Profile Picture">
+</div>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-card">
+      <h3>The Capital Correction Project</h3>
+      <p>A strategic modelling initiative to map sustainability incentives in high-emission industries. Focused on ESG-aligned growth opportunities across the steel and cement sectors.</p>
+    </div>
+  </section>
+
+<section id="writeups" class="section">
+  <h2 class="section-title">✍️ Thoughts & Write-ups</h2>
+  <p class="section-subtitle">
+    Here’s where I document what I’ve observed, questioned, and tried to understand - from climate adaptation strategies and environmental policy to the social mechanics of change.
+    The write-ups include short-form reflections on Medium, as well as my Master’s dissertation, which takes a data-driven look at labour productivity during heatwaves in India.
+  </p>
+
+  <div class="writeups-container">
+    <!-- Medium Article Card -->
+    <a href="https://medium.com/@rg.sonya22" target="_blank" class="writeup-card">
+      <div class="writeup-content">
+        <h3>View Medium Articles</h3>
+        <p>Short-form reflections on climate, systems, and strategy.</p>
+      </div>
+    </a>
+
+    <!-- Dissertation Card -->
+    <a href="your-dissertation.pdf" download class="writeup-card">
+      <div class="writeup-content">
+        <h3>Download Dissertation</h3>
+        <p>Research on heatwaves & productivity in high-heat regions.</p>
+      </div>
+    </a>
+  </div>
+</section>
+
+  <section id="resume">
+    <h2>Resume</h2>
+    <a class="resume-button" href="Sonya Gopinath Resume Sustainability.pdf" target="_blank">Download Resume</a>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <div class="icons">
+      <a href="mailto:sonya.r.gopinath@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/sonya-gopinath/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/yourgithub" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+      <a href="https://medium.com/@rg.sonya22/outdated-metrics-in-esg-reports-the-revenue-centric-ethos-7b7b6054fcd5" target="_blank" title="Medium"><i class="fab fa-medium"></i></a>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Sonya Gopinath. All rights reserved.</p>
+  </footer>
 </body>
 </html>
+
