--- a/index.html
+++ b/index.html
@@ -233,28 +233,41 @@
       #contact .icons a {
         font-size: 1.8rem;
       }
-      .about-container {
+      #about {
+  padding: 4rem 2rem;
+  max-width: 900px;
+  margin: auto;
+  text-align: center; /* Ensures that the section is centered */
+}
+
+#about h2 {
+  font-size: 2.2rem;
+  margin-bottom: 20px;
+  color: #3d3d4e;
+}
+
+.about-content {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 2rem;
+  justify-content: center; /* Centers everything in the section */
   flex-wrap: wrap;
-  max-width: 800px;
-  margin: 0 auto;
+  gap: 2rem;
 }
 
 .profile-image img {
-  width: 160px;
-  height: 160px;
+  width: 180px; /* Slightly bigger image */
+  height: 180px;
   object-fit: cover;
   border-radius: 50%;
   border: 3px solid #d0cfe3;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
 
-.about-text {
-  flex: 1;
-  min-width: 250px;
+#about p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+  max-width: 800px;
+  text-align: left; /* Aligns the text to the left of the section */
 }
 
     }
@@ -279,18 +292,16 @@
   </section>
 
 
-<section id="about">
+
+  <section id="about">
   <h2>About Me</h2>
-  <div class="about-container">
+  <div class="about-content">
     <div class="profile-image">
-      <img src="sonya profile 2.JPG" alt="Sonya's profile photo" />
+      <img src="sonya profile 2.JPG" alt="Sonya's Profile Picture" />
     </div>
-    <div class="about-text">
       <p>I’m Sonya, an LSE grad actively tackling real-world sustainability challenges. Right now, I’m deep into shaping strategies for sustainability in high-emitting sectors, building practical models for carbon reduction in industries like steel and cement. I’m also researching how extreme heat impacts productivity in India, using data-driven tools to push the boundaries of climate research. With my background in inclusive development, I’m bringing creative, solution-oriented thinking to every project I work on. Whether that’s shaping ESG strategies, supporting policy change, or engaging communities on climate action. My goal is to bridge the gap between data, policy, and real-world impact, contributing to change that’s both achievable and lasting.</p>
-    </div>
   </div>
 </section>
-
   
   <section id="projects">
     <h2>Projects</h2>
