--- a/index.html
+++ b/index.html
@@ -233,38 +233,34 @@
       #contact .icons a {
         font-size: 1.8rem;
       }
-#about {
-  padding: 40px;
-  background-color: #f9f9f9;
-}
-
 .about-container {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 40px;
+  max-width: 1000px;
+  margin: auto;
+  padding: 40px;
 }
 
 .profile-pic {
-  width: 280px;
-  height: 280px;
+  width: 250px;
+  height: auto;
   object-fit: cover;
-  border-radius: 50%;
+  border-radius: 12px;
 }
 
 .about-text {
-  flex: 1;
+  max-width: 600px;
 }
 
 .about-text h2 {
-  margin: 0;
-  font-size: 28px;
+  margin: 0 0 10px;
 }
 
 .about-text p {
-  margin-top: 12px;
-  font-size: 16px;
   line-height: 1.6;
+  font-size: 16px;
 }
 
     }
