--- a/index.html
+++ b/index.html
@@ -6,234 +6,208 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <title>Sonya's Portfolio</title>
   <style>
-    :root {
-      --primary: #b9a3e3; /* lilac */
-      --background: #f9f7fc;
-      --section-alt: #f0edf7;
-      --text: #1a1a1a;
-      --accent: #555;
-    }
+:root {
+  --primary: #b9a3e3; /* lilac */
+  --background: #f9f7fc;
+  --section-alt: #f0edf7;
+  --text: #1a1a1a;
+  --accent: #555;
+}
 
-    html {
-      scroll-behavior: smooth;
-    }
+html {
+  scroll-behavior: smooth;
+}
 
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      background-color: var(--background);
-      color: var(--text);
-    }
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  background-color: var(--background);
+  color: var(--text);
+}
 
-    header {
-      position: sticky;
-      top: 0;
-      background: white;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid #ddd;
-      z-index: 999;
-    }
+header {
+  position: sticky;
+  top: 0;
+  background: white;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+  z-index: 999;
+}
 
-    nav a {
-      margin-left: 1rem;
-      text-decoration: none;
-      color: var(--accent);
-      font-weight: 500;
-    }
+nav a {
+  margin-left: 1rem;
+  text-decoration: none;
+  color: var(--accent);
+  font-weight: 500;
+}
 
-    section {
-      padding: 4rem 2rem;
-      max-width: 900px;
-      margin: auto;
-    }
+section {
+  padding: 4rem 2rem;
+  max-width: 900px;
+  margin: auto;
+}
 
-    section:nth-of-type(even) {
-      background-color: var(--section-alt);
-    }
+section:nth-of-type(even) {
+  background-color: var(--section-alt);
+}
 
-    .landing {
-      text-align: center;
-      padding-top: 6rem;
-    }
+.landing {
+  text-align: center;
+  padding-top: 6rem;
+}
 
-    .landing h1 {
-      font-size: 3rem;
-      color: var(--primary);
-    }
+.landing h1 {
+  font-size: 3rem;
+  color: var(--primary);
+}
 
-    .landing p {
-      font-size: 1.2rem;
-      margin-top: 1rem;
-      color: var(--accent);
-    }
+.landing p {
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  color: var(--accent);
+}
 
-    .profile-image img {
-      width: 160px;
-      height: 160px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 3px solid #d0cfe3;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
+.profile-image img {
+  width: 160px;
+  height: 160px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 3px solid #d0cfe3;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
 
-    #about h2, #projects h2, #resume h2, #contact h2 {
-      font-size: 2.2rem;
-      text-align: center;
-      margin-bottom: 20px;
-      color: #3d3d4e;
-    }
+#about h2, #projects h2, #resume h2, #contact h2 {
+  font-size: 2.2rem;
+  text-align: center;
+  margin-bottom: 20px;
+  color: #3d3d4e;
+}
 
-    #about p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      max-width: 800px;
-      margin: 20px auto;
-      text-align: center;
-    }
+#about p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+  max-width: 800px;
+  margin: 20px auto;
+  text-align: center;
+}
 
-    #projects .project-card {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 2rem 0;
-      text-align: center;
-    }
+#projects .project-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem 0;
+  text-align: center;
+}
 
-    .project-info h3, .project-card h3 {
-      font-size: 1.8rem;
-      color: #4b3e6e;
-      margin-bottom: 10px;
-    }
+.project-info h3, .project-card h3 {
+  font-size: 1.8rem;
+  color: #4b3e6e;
+  margin-bottom: 10px;
+}
 
-    .project-info p, .project-card p {
-      font-size: 1.1rem;
-      color: #555;
-    }
+.project-info p, .project-card p {
+  font-size: 1.1rem;
+  color: #555;
+}
 
-    .resume-button {
-      display: block;
-      padding: 0.75rem 1.5rem;
-      background: var(--primary);
-      color: white;
-      border: none;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s ease;
-      width: fit-content;
-      margin: 0 auto;
-    }
+.resume-button {
+  display: block;
+  padding: 0.75rem 1.5rem;
+  background: var(--primary);
+  color: white;
+  border: none;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background 0.3s ease;
+  width: fit-content;
+  margin: 0 auto;
+}
 
-    .resume-button:hover {
-      background: #9a80cc;
-    }
+.resume-button:hover {
+  background: #9a80cc;
+}
 
-    .section {
-      text-align: center;
-    }
+.section {
+  text-align: center;
+}
 
-    .section-title {
-      font-size: 2.2rem;
-      margin-bottom: 10px;
-      color: #3d3d4e;
-    }
+.section-title {
+  font-size: 2.2rem;
+  margin-bottom: 10px;
+  color: #3d3d4e;
+}
 
-    .section-subtitle {
-      font-size: 1rem;
-      max-width: 700px;
-      margin: 0 auto 40px auto;
-      color: #5a5a6e;
-      line-height: 1.6;
-    }
+.section-subtitle {
+  font-size: 1rem;
+  max-width: 700px;
+  margin: 0 auto 40px auto;
+  color: #5a5a6e;
+  line-height: 1.6;
+}
 
-    .writeups-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-    }
+.writeups-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
 
-    .writeup-card {
-      background: #e6e3f0;
-      border: 1px solid #d0cfe3;
-      border-radius: 16px;
-      padding: 30px;
-      width: 280px;
-      text-align: left;
-      text-decoration: none;
-      transition: transform 0.2s ease, box-shadow 0.3s ease;
-    }
+.writeup-card {
+  background: #e6e3f0;
+  border: 1px solid #d0cfe3;
+  border-radius: 16px;
+  padding: 30px;
+  width: 280px;
+  text-align: left;
+  text-decoration: none;
+  transition: transform 0.2s ease, box-shadow 0.3s ease;
+}
 
-    .writeup-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.15);
-    }
+.writeup-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+}
 
-    .writeup-content h3 {
-      font-size: 1.2rem;
-      margin-bottom: 10px;
-      color: #1c1c1e;
-    }
+.writeup-content h3 {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  color: #1c1c1e;
+}
 
-    .writeup-content p {
-      font-size: 0.95rem;
-      color: #3e3e4e;
-    }
+.writeup-content p {
+  font-size: 0.95rem;
+  color: #3e3e4e;
+}
 
-    #contact .icons {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
-    }
+#contact .icons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
 
-    #contact .icons a {
-      color: #333;
-      font-size: 2rem;
-      transition: color 0.3s ease, transform 0.2s ease;
-    }
+#contact .icons a {
+  color: #333;
+  font-size: 2rem;
+  transition: color 0.3s ease, transform 0.2s ease;
+}
 
-    #contact .icons a:hover {
-      color: #7d6bb8;
-      transform: scale(1.2);
-    }
+#contact .icons a:hover {
+  color: #7d6bb8;
+  transform: scale(1.2);
+}
 
-    footer {
-      text-align: center;
-      padding: 2rem 0;
-      background: #f0edf7;
-    }
+footer {
+  text-align: center;
+  padding: 2rem 0;
+  background: #f0edf7;
+}
 
-    @media screen and (max-width: 768px) {
-      h1 {
-        font-size: 2.5rem;
-      }
-
-      h2 {
-        font-size: 2rem;
-      }
-
-      .project-card {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      .writeups-container {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .writeup-card {
-        width: 90%;
-      }
-
-      #contact .icons a {
-        font-size: 1.8rem;
-      }
-/* Base Styles (Works on all screen sizes but more refined for larger screens) */
+/* --- ABOUT SECTION SPECIFIC --- */
 #about {
   display: flex;
   justify-content: center;
@@ -248,15 +222,15 @@
   gap: 20px;
   max-width: 1200px;
   width: 100%;
-  justify-content: center; /* Center align everything horizontally */
+  justify-content: center;
 }
 
 .profile-pic {
-  width: 150px;  /* Fixed size of the image */
+  width: 150px;
   height: 150px;
   object-fit: cover;
-  border-radius: 50%;  /* Ensures the image is circular */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);  /* Adds shadow */
+  border-radius: 50%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .about-text {
@@ -278,27 +252,52 @@
   line-height: 1.6;
 }
 
-/* Media Query for Smaller Screens */
-@media (max-width: 768px) {
+/* --- RESPONSIVE BREAKPOINTS --- */
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  .project-card {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .writeups-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .writeup-card {
+    width: 90%;
+  }
+
+  #contact .icons a {
+    font-size: 1.8rem;
+  }
+
   .about-container {
-    flex-direction: column;  /* Stack image and text */
+    flex-direction: column;
     align-items: center;
   }
 
   .profile-pic {
-    width: 120px;  /* Adjust size for smaller screens */
+    width: 120px;
     height: 120px;
   }
 
   .about-text {
-    text-align: center;  /* Center text for mobile */
+    text-align: center;
   }
 }
 
-/* Optional: Add a larger breakpoint for extra-large screens */
 @media (min-width: 1200px) {
   .about-container {
-    gap: 30px;  /* Extra space between image and text for larger screens */
+    gap: 30px;
   }
 }
 
