--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ section:nth-of-type(even) {
   font-size: 1.1rem;
   color: #444;
   line-height: 1.7;
+  text-align: center; /* ✅ center the blurb */
 }
 
 #projects .app-card {
@@ -113,7 +114,9 @@ section:nth-of-type(even) {
   margin: 0 auto;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease, box-shadow 0.3s ease;
+  text-align: center; /* ✅ centers all content inside */
 }
+
 
 #projects .app-card:hover {
   transform: translateY(-5px);
